# Action_Robot_Perception

./: README.md
action_base/: CMakeLists.txt  package.xml
action_base/include/action_base/: test.h
action_base/include/action_base/base/: path.hpp
action_base/include/action_base/perception/: BoundingBox2D.hpp
action_base/src/: test.cpp
action_control/: CMakeLists.txt  package.xml
action_localization/: CMakeLists.txt  package.xml
action_msg/: CMakeLists.txt  package.xml
action_msg/msg/: ActionBoundingBox2D.msg  ActionBoundingBox2DList.msg
action_node/: CMakeLists.txt  package.xml
action_node/include/action_node/perception/: action_perception_2d_detection.h
action_node/src/perception/: action_perception_2d_detection.cpp
action_perception/: CMakeLists.txt  package.xml
action_perception/include/detection_2d/: yolov6s.h
action_perception/src/: main.cpp
action_perception/src/detection_2d/: yolov6s.cpp
action_planning/: CMakeLists.txt  package.xml
detection_2d/: CMakeLists.txt  package.xml
detection_2d/src/: test.cpp
